# ldjam

./: CMakeLists.txt  main.cpp  objects.cpp  objects.h  todo.md
examples/: CMakeLists.txt
examples/example_basic/: CMakeLists.txt  main.cpp
examples/example_gui/: CMakeLists.txt  common.h  main.cpp
examples/example_nomad/: CMakeLists.txt  main.cpp
examples/example_platformer/: CMakeLists.txt  camera.cpp  camera.h  common.h  input.h  main.cpp  map.h  particles.h  player.cpp  player.h
examples/example_platformer/assets/: swords.ase
examples/example_racer/: CMakeLists.txt  common.h  main.cpp
examples/example_racer/assets/: car.ase
examples/example_spine/: CMakeLists.txt  common.h  example_spine.ilk  main.cpp
framework/: CMakeLists.txt  anim.h  bitmap.cpp  const.h  file.h  fsm.h  objects.cpp  objects.h  random.h  spatial.cpp  spatial.h  timer.h  vec2.h  vec3.h
framework/audio/: CMakeLists.txt  stb_vorbis.c  stb_vorbis.h
framework/draw/: CMakeLists.txt
framework_audio/: CMakeLists.txt  audio.cpp  audio.h  queue.h  source_vorbis.h  source_wave.cpp  source_wave.h  vorbis.h  wave.cpp  wave.h
framework_audio/format/: vorbis.h  wave.cpp  wave.h
framework_audio/source/chip/: blip_table.cpp  decimate.h  source_chip.cpp  source_chip.h  verb.cpp  verb.h
framework_audio/source/vorbis/: source_vorbis.cpp  source_vorbis.h
framework_audio/source/wave/: source_wave.cpp  source_wave.h
framework_core/: CMakeLists.txt  anim.h  astar.h  atomic.h  bsp.cpp  bsp.h  buffer.h  common.h  event.h  file.h  fsm.h  gc.h  geometric.h  geometry.h  lazy.h  mat2.h  objects.cpp  objects.h  particle.h  random.h  rect.h  registry.h  spatial.cpp  spatial.h  string.h  thread.cpp  thread.h  tiles.cpp  tiles.h  timer.h  vec2.h  vec3.h  vec4.h
framework_draw/: CMakeLists.txt  bitmap.cpp  bitmap.h  blit.cpp  draw.cpp  draw.h  draw_blit.cpp  draw_present.cpp  draw_raster.cpp  draw_text.cpp  font.cpp  font.h  raster.cpp  text_buffer.cpp  text_buffer.h
framework_gl_draw/: CMakeLists.txt  gl_draw.cpp  gl_draw.h  gl_mat4.h  gl_shader.cpp  gl_shader.h  gl_texture.cpp  gl_texture.h
framework_gui/: CMakeLists.txt  framework_gui.cpp  framework_gui.h  framework_gui_widgets.cpp  framework_gui_widgets.h
framework_sdl/: CMakeLists.txt  framework_sdl.cpp  framework_sdl.h
framework_spatial/: CMakeLists.txt  aabb_tree.cpp  aabb_tree.h  space_hash.cpp  space_hash.h  sweep_prune.h
framework_spine/: CMakeLists.txt  framework_spine.cpp  framework_spine.h
framework_tiles/: CMakeLists.txt  pathfind.h  tiles.cpp  tiles.h
game_surge/: CMakeLists.txt  audio.cpp  audio.h  draw.cpp  draw.h  main.cpp  surge.cpp  surge.h
games/: CMakeLists.txt
games/blackhat/: CMakeLists.txt  computer.cpp  computer.h  main.cpp
testing/: CMakeLists.txt  test_anim.cpp  test_bitmap.cpp  test_file.cpp  test_fsm.cpp  test_objects.cpp  test_spatial.cpp  test_timer.cpp  testing.cpp  testing.h
tests/: CMakeLists.txt
tests/test_audio/: CMakeLists.txt  test_audio.cpp
tests/test_audio_unit/: CMakeLists.txt  test_audio_unit.cpp
tests/test_core_bsp/: CMakeLists.txt  test_core_bsp.cpp
tests/test_core_geometry/: CMakeLists.txt  test_core_geometry.cpp
tests/test_core_rand/: CMakeLists.txt  test_core_rand.cpp
tests/test_core_spatial/: CMakeLists.txt
tests/test_core_tiles/: CMakeLists.txt  test_core_tiles.cpp
tests/test_core_unit/: CMakeLists.txt  test_core.cpp  test_core_anim.cpp  test_core_buffer.cpp  test_core_event.cpp  test_core_file.cpp  test_core_fsm.cpp  test_core_gc.cpp  test_core_object.cpp  test_core_registry.cpp  test_core_timer.cpp
tests/test_draw/: CMakeLists.txt  test_draw.cpp
tests/test_draw_unit/: CMakeLists.txt  test_bitmap.cpp
tests/test_gl_draw/: CMakeLists.txt  test_gl_draw.cpp
tests/test_lib/: CMakeLists.txt  test_lib.cpp  test_lib.h
tests/test_sdl/: CMakeLists.txt  test_sdl.cpp  test_sdl.h
tests/test_spatial/: CMakeLists.txt  test_spatial.cpp
tests/test_stb_vorbis/: CMakeLists.txt  test_stb_vorbis.cpp
tests/test_tiles/: CMakeLists.txt  test.h  test_astar.cpp  test_tiles.cpp
tools/: CMakeLists.txt
tools/lib_vst/: CMakeLists.txt  aeffect.h  aeffectx.h  aeffeditor.h  audioeffectx.h  pluginbase.h  vstfxstore.h
tools/vst_channel/: CMakeLists.txt  vst_channel.cpp
tools/vst_chip/: CMakeLists.txt  vst_chip.cpp
tools/vst_chip/lib_vst/: audioeffect.cpp  audioeffect.h  audioeffectx.cpp  pluginbase.h  utility.h  vstplugmain.cpp
