cmake_minimum_required(VERSION 3.4)
project(tengu)

set_property(GLOBAL PROPERTY USE_FOLDERS ON)

set(tengu_build_framework_audio   TRUE CACHE BOOL "Build the audio framework")
set(tengu_build_framework_draw    TRUE CACHE BOOL "Build the draw framework")
set(tengu_build_framework_gldraw  TRUE CACHE BOOL "Build the gldraw framework")
set(tengu_build_framework_sdl     TRUE CACHE BOOL "Build the SDL framework")
set(tengu_build_framework_spatial TRUE CACHE BOOL "Build the spatial framework")
set(tengu_build_framework_tiled   TRUE CACHE BOOL "Build the tiled framework")

set(tengu_build_examples          TRUE CACHE BOOL "Build examples")
set(tengu_build_games             TRUE CACHE BOOL "Build games")
set(tengu_build_tests             TRUE CACHE BOOL "Build tests")

add_subdirectory(framework_core)
add_subdirectory(external)

if (${tengu_build_framework_audio})
  add_subdirectory(framework_audio)
endif()
if (${tengu_build_framework_draw})
  add_subdirectory(framework_draw)
endif()
if (${tengu_build_framework_gldraw})
  add_subdirectory(framework_gl_draw)
endif()
if (${tengu_build_framework_sdl})
  add_subdirectory(framework_sdl)
endif()
if (${tengu_build_framework_spatial})
  add_subdirectory(framework_spatial)
endif()
if (${tengu_build_framework_tiled})
  add_subdirectory(framework_tiles)
endif()
if (${tengu_build_examples})
  add_subdirectory(examples)
endif()
if (${tengu_build_games})
  add_subdirectory(games)
endif()
if (${tengu_build_tests})
  add_subdirectory(tests)
endif()

