add_subdirectory(test_core_bsp)
add_subdirectory(test_core_geometry)
add_subdirectory(test_core_rand)
add_subdirectory(test_core_spatial)
add_subdirectory(test_core_unit)
add_subdirectory(test_core_tiles)

add_subdirectory(test_audio)
add_subdirectory(test_audio_unit)

add_subdirectory(test_draw)
add_subdirectory(test_draw_unit)

add_subdirectory(test_gl_draw)

add_subdirectory(test_stb_vorbis)
