add_subdirectory(test_audio)
add_subdirectory(test_audio_unit)
add_subdirectory(test_core_geometry)
add_subdirectory(test_core_rand)
add_subdirectory(test_core_unit)
add_subdirectory(test_draw)
add_subdirectory(test_draw_unit)
add_subdirectory(test_gl_draw)
add_subdirectory(test_lib)
add_subdirectory(test_spatial)
add_subdirectory(test_sdl)
add_subdirectory(test_stb_vorbis)
add_subdirectory(test_tiles)
